--- a/src/main/resources/project-defaults.yaml
+++ b/src/main/resources/project-defaults.yaml
@@ -18,7 +18,7 @@ swarm:
           domain-events: {}
 
         pooled-connection-factories:
-          remote-mq:
+          remote-activemq:
             connectors: remote-activemq
             entries: java:/jms/remote-mq
             user: yourUser
