--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ repositories {
 
 dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.1'
 
     // include what swarm needs to run the app
     compile group: 'org.wildfly.swarm', name: 'logging', version: swarmVersion
